--- a/web-client/assets/scss/main.scss
+++ b/web-client/assets/scss/main.scss
@@ -11,7 +11,7 @@
   --black-300: #555555;
   --black-300-transparent: #55555560;
 
-  --red: #d80303;
+  --red: #f74720;
 
   --gray-900: #575757;
 
