--- a/web-client/assets/scss/main.scss
+++ b/web-client/assets/scss/main.scss
@@ -36,6 +36,8 @@
   --button-hover: #20b5ff;
 
   --status-color-error: #f74720;
+  --status-color-success: #3bd865;
+  --status-color-pending: #f7cc20;
 
   --shadow: drop-shadow(0 0 3px #00000044);
   --shadow-large: drop-shadow(0 0 20px #00000044);
